# DnDSheet

./: .gitignore  README.md  dataPopulate.py  jsonPopulate.py  wikiScrape.py
SheetUI/: CMakeLists.txt  Main.qml  backend.cpp  backend.h  icons.qrc  main.cpp  shaders.qrc
SheetUI/UI/customClasses/: dnditem.cpp  dnditem.h  dnditemlist.cpp  dnditemlist.h  listhandler.cpp  listhandler.h  proxyitemlist.cpp  proxyitemlist.h
SheetUI/UI/itemsPage/: ItemsPage.qml
SheetUI/UI/navigation/: ChangelogList.qml  MenuOption.qml  MenuPage.qml
SheetUI/UI/pages/: Guide.qml  GuideInfo.qml  GuideSideBar.qml  GuideSideOption.qml  Items.qml  ItemsComboBox.qml  ItemsComponents.qml
SheetUI/UI/resNavBar/: LeftHandNav.qml  NavBar.qml  WheelMenu.qml
SheetUI/UI/settings/: Style.qml
data/: classList.xml  commonArmorList.xml  commonItemList.xml  commonSpellList.xml  itemList.xml
